--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
  	<meta name="keywords" content=""/>
  	<meta name="author" content="name, sycbbb@sina.com"/>
  	<meta name="robots" content="index,follow"/>
-	<title></title>
+	<title>页面未找到 – 东呈国际集团官方预订平台</title>
 	<link rel="stylesheet" href="styles/login-register.css">
 	<link rel="stylesheet" href="styles/404.css">
 	<style>
