--- a/orderPaySuccess.html
+++ b/orderPaySuccess.html
@@ -57,7 +57,7 @@
 					<div class="l">
 						<div class="title">
 							<i></i>
-							<h3>订单已提交，请尽快付款！</h3>
+							<h3>支付成功，房间已为您保留整晚！</h3>
 						</div>
 						<p>入住房型：精选大床房<span>订单状态：<em>待入住</em></span>订单金额：￥248</p>
 					</div>
