--- a/confirmOrder.html
+++ b/confirmOrder.html
@@ -172,7 +172,7 @@
 						<div class="items">
 							<em><i>*</i> 身份证号： </em>
 							<label><input type="text" placeholder="请输入身份证号"></label>
-							<span>预订成功后会向您发送短信通知</span>
+							<span>生日免费房需与身份证号生日信息保持一致</span>
 						</div>
 						<!-- 登陆后以下class items 是不显示的，未登录才显示的 begin-->
 						<div class="items">
